<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:src="@drawable/garage"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="TradeWithMe"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextIcons"
        android:layout_above="@+id/tradeButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Enter Location "
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/tradeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="TRADE"
        android:textColor="@color/colorTextIcons"
        android:padding="10dp"
        android:background="@drawable/mybutton" />

</RelativeLayout>